# ats-agent

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  agent_framework.py  agent_skills_manifest.json  framework_comparison.md  requirements.txt  setup.py  test_agent.py
ats_agent/: .env.example  README.md  pyproject.toml  requirements.txt
ats_agent/src/: __init__.py  api.py  main.py  schema.py  settings.py
ats_agent/src/cli/: __init__.py  report.py
ats_agent/src/core/: __init__.py  agent.py  exceptions.py  llm.py  manager.py  prompt.py  prompt_templates.py  tools.py
ats_agent/src/core/resume_structure/: __init__.py  loader.py  runner.py
ats_agent/src/core/resume_structure/templates/: extract_awards.jinja  extract_basics.jinja  extract_education.jinja  extract_projects.jinja  extract_skills.jinja  extract_work.jinja  github_repo_shortlist.jinja  parser_section_system.jinja  scorecard_system.jinja  scorecard_user.jinja
ats_agent/src/routes/: feedback.py  health.py  history.py  stream.py
ats_agent/src/utils/: document_extract.py  logger.py  source_resolver.py  text_heuristics.py
test_data/: sample_job_description.txt  sample_resume.txt
